--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+// _variables.scss
+
 $color-white-background: #f9fcff;
 $color-secondary-background: #ebeff6;
 $color-white-gray: rgb(240, 240, 240);
@@ -8,3 +10,4 @@ $color-wine-red: #a4074d;
 
 $border-color: #ebeff6;
 $text-color: #1a2434;
+$color-primary: #9e003f;  // You can define your primary color here
